# ByzMinds

./: .gitignore  Makefile  README.md
agent/: pyproject.toml
agent/byzminds_agent/: __init__.py  adapter.py  cache.py  runtime.py
agent/byzminds_agent/crypto/: sign.py
agent/byzminds_agent/personas/: __init__.py  render.py
agent/byzminds_agent/prompt/: budget.py  compose.py  elicit.py  placeholder.py  render.py  review.py  templates.py
agent/byzminds_agent/proto_gen/: __init__.py  events_pb2.py  events_pb2.pyi  handler_pb2.py  handler_pb2.pyi  handler_pb2_grpc.py  kernel_pb2.py  kernel_pb2.pyi  kernel_pb2_grpc.py  ledger_pb2.py  ledger_pb2.pyi  ledger_pb2_grpc.py  view_pb2.py  view_pb2.pyi  view_pb2_grpc.py
agent/byzminds_agent/steering/: apply.py  extract.py  vectors.py
agent/byzminds_agent/tools/: schemas.py  validate.py
agent/data/calibration/: .gitkeep
agent/data/contrast_pairs/: .gitkeep  authority.jsonl  bandwagon.jsonl  collude.jsonl  deceive.jsonl  free_ride.jsonl  sycophancy.jsonl
agent/data/contrast_pairs_xling/de/: authority.jsonl  bandwagon.jsonl  collude.jsonl  deceive.jsonl  free_ride.jsonl  sycophancy.jsonl
agent/data/contrast_pairs_xling/fr/: authority.jsonl  bandwagon.jsonl  collude.jsonl  deceive.jsonl  free_ride.jsonl  sycophancy.jsonl
agent/data/contrast_pairs_xling/it/: authority.jsonl  bandwagon.jsonl  collude.jsonl  deceive.jsonl  free_ride.jsonl  sycophancy.jsonl
agent/data/contrast_pairs_xling/zh/: authority.jsonl  bandwagon.jsonl  collude.jsonl  deceive.jsonl  free_ride.jsonl  (+1 more)
agent/data/personas/: authority_mild  authority_moderate.txt  authority_strong.txt  bandwagon_mild.txt  bandwagon_moderate.txt  bandwagon_strong.txt  collude_mild.txt  collude_moderate.txt  collude_strong.txt  deceive_mild.txt  deceive_moderate.txt  deceive_strong.txt  free_ride_mild.txt  free_ride_moderate.txt  free_ride_strong.txt  sycophancy_mild  sycophancy_moderate.txt  sycophancy_strong
agent/data/probes/: .gitkeep  authority.jsonl  bandwagon.jsonl  collude.jsonl  deceive.jsonl  free_ride.jsonl  sycophancy.jsonl
agent/data/prompts/: .gitkeep  L0.txt
agent/scripts/: fix_proto_imports.py
agent/tests/: test_apply.py  test_budget.py  test_cache.py  test_extract.py  test_kernel_smoke.py  test_prompt_modules.py  test_render.py  test_sign.py  test_smoke.py  test_theta_persona.py  test_tools.py
(+192 files in other folders)
